BUGFIX: set overflow: hidden; on CaptionedImageBlock so image doesn't overflow its box

--- a/jetstream/static/jetstream/css/blocks/captioned-image.less
+++ b/jetstream/static/jetstream/css/blocks/captioned-image.less
@@ -1,4 +1,5 @@
 .captioned-image {
+  overflow: hidden;
   .image-details {
     line-height: 1.5;
     margin-top: 10px;
